# l

./: .env.template  .gitignore  README.md  bootstrap.sh  colima.yaml  flake.nix  home.nix  local.nix.sh  portal.html  versions.nix  vm
pi-extensions/: TODO.md  direnv-bash.ts
scripts/: gw  update-versions.sh
skills/brave-search/: README.md
skills/gh-run-view/: SKILL.md  gh-run-view.sh
skills/gw-subagent/: SKILL.md
skills/stt/: .gitignore  SKILL.md  pyproject.toml  stt
skills/stt/bench/: bench.sh
skills/stt/src/stt_nemo/: __init__.py  __main__.py
skills/tts/: SKILL.md  bench.sh  tts
skills/yt-transcript/: SKILL.md  yt-transcript.ts  yt_transcript.ts
